--- a/kiwifarms.conf
+++ b/kiwifarms.conf
@@ -1,25 +1,22 @@
-# Logstash file for converting `posts` table in SQL database to an Elasticsearch index
-
 input {
   jdbc {
     jdbc_connection_string => "jdbc:mysql://localhost:3306/kiwifarms_20210224"
     jdbc_user => "${KIWIFARMER_USER}"
     jdbc_password => "${KIWIFARMER_PASSWORD}"
     jdbc_driver_library => "/usr/share/java/mysql-connector-java-8.0.23.jar"
-    jdbc_driver_class => "com.mysql.jdbc.Driver"
+    jdbc_driver_class => "com.mysql.cj.jdbc.Driver"
     statement => "SELECT * FROM posts"
     jdbc_paging_enabled => true
     jdbc_page_size => 100000
   }
 }
+
 filter {
   mutate {
-    remove_field => [
-      "@timestamp",
-      "@version"
-    ]
+    remove_field => ["@timestamp", "@version"]
   }
 }
+
 output {
   stdout {
     codec => rubydebug
