--- a/.github/workflows/sitemap.yml
+++ b/.github/workflows/sitemap.yml
@@ -33,7 +33,7 @@ jobs:
         uses: cicirello/generate-sitemap@eb8db82126ee30619883c8c43e8c49ec14ebd6dc # v1.10.1
         with:
           base-url-path: https://kiwifarms.typpi.online/
-          additional-extensions: doc docx ppt pptx js css json xml xlsx xls pdf md markdown txt lua yaml yml png conf ini py
+          additional-extensions: doc docx ppt pptx js css json xml xlsx xls pdf md markdown txt lua yaml yml png conf ini py rst sh
 
       # Step to output the sitemap generation stats for debugging and verification
       - name: Output stats
