--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,18 @@ aiofiles==24.1.0
 aiohttp==3.11.12
 beautifulsoup4==4.13.3
 elasticsearch==8.17.1
+matplotlib==3.10.0
 mysql_connector_repackaged==0.3.1
-numpy==2.2.2
+networkx==3.4.2
+numpy==2.2.3
 pandas==2.2.3
 pytest==8.1.1
 redis==5.2.1
 Requests==2.32.3
+seaborn==0.13.2
 selenium==4.28.1
 setuptools==75.1.0
 Sphinx==8.1.3
+textblob==0.19.0
 webdriver_manager==4.0.2
-lxml==4.9.1
+wordcloud==1.9.4
