--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -32,9 +32,9 @@ name: Lint Code Base
 on:
   workflow_dispatch:
   push:
-    branches: ["main"]
+    branches: ["master"]
   pull_request:
-    branches: ["main"]
+    branches: ["master"]
 permissions:
   contents: write
 
