--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -60,6 +60,6 @@ jobs:
         uses: super-linter/super-linter@85f7611e0f7b53c8573cca84aa0ed4344f6f6a4d # v7.2.1
         #checkov:skip=skip-check:CKV2_GHA_1
         env:
-          DEFAULT_BRANCH: "main"
+          DEFAULT_BRANCH: "master"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DISABLE_ERRORS: true
